PSD to HTML registration and resetpassword done

--- a/HTML/PSD to HTML/css/login-responsive.css
+++ b/HTML/PSD to HTML/css/login-responsive.css
@@ -22,6 +22,23 @@
         height: 80vh;
     }
 
+    .login-input {
+        width: 60vw;
+    }
+
+    .login-label {
+        font-size: 20px;
+    }
+
+    .login-input {
+        font-size: 20px;
+    }
+
+    .bottom-div span {
+        font-size: 18px !important;
+    }
+
+
 }
 
 /* for mobile */
