--- a/HTML/PSD to HTML/css/style.css
+++ b/HTML/PSD to HTML/css/style.css
@@ -29,7 +29,7 @@ img {
 
 .login-input {
 
-    border: 1px solid #2B64B1;
+    border: 1px solid #D9D9D9;
     border-radius: 3px;
 }
 
@@ -48,12 +48,14 @@ span>a {
 
 
 .hero-image {
-    background-image: url(../images/Grow-Trees-On-the-path-to-environment-sustainability-login.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(../images/Grow-Trees-On-the-path-to-environment-sustainability-login.png);
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
+
     /* background-position: center; */
 }
+
 
 .image-content {
     color: white;
