--- a/HTML/HTML Training Assignment/css/index-responsive.css
+++ b/HTML/HTML Training Assignment/css/index-responsive.css
@@ -1,133 +1,42 @@
-/* for Tablets */
-@media only screen and (max-width:768px) {
+@media (min-width:993px) {
     .main {
-        display: flex;
-        flex-direction: column;
+        /* display: flex; */
+        /* flex-direction: column !important; */
         /* justify-content: center; */
         align-items: center;
         /* background-color: black; */
         /* flex-direction: row; */
         /* background-color: black; */
     }
-
-    .left {
-        display: flex !important;
-
-        justify-content: center !important;
-
-    }
-
-    .right {
-        padding-left: 7rem;
-        padding-top: 2rem;
-        margin: 0 1rem;
-    }
-
-    .hero-image {
-        height: 50%;
-        width: 40%;
-    }
-
-    /* .left {
-        width: 100%;
-    } */
-
-
-
-    #logo1 {
-        /* height: 100%; */
-        /* width: fit-content; */
-        height: 80%;
-        width: 50%;
-    }
-
-    .desc {
-        /* width: fit-content; */
-        font-size: 17px;
-
-        height: 50%;
-        width: 50%;
-    }
-
-    .login-msg {
-        font-size: 15px;
-        height: 50%;
-        width: 50%;
-    }
-
-    .right input {
-        height: 30px;
-        width: 50%;
-
-    }
-
-    input::placeholder {
-        font-size: 15px;
-    }
-
-    .login-btn-div {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        /* max-width: 100%; */
-    }
-
-    .login-button {
-        height: 30px;
-        width: 20%;
-        font-size: 15px;
-    }
-
-    .fp {
-        margin-left: 0%;
-        font-size: 0.9rem;
-
-    }
-
-
-    .con {
-        font-size: 0.9rem;
-        height: 50%;
-        width: 50%;
-    }
-
-    .register {
-        height: 50%;
-        width: 50%;
-        font-size: 0.9rem;
-
-    }
-
 }
 
-/* for mobiles */
-
-@media only screen and (max-width:480px) {
+@media (max-width:992px) {
     .main {
-        display: flex;
-        flex-direction: column;
+        /* display: flex; */
+        flex-direction: column !important;
         /* justify-content: center; */
         align-items: center;
+        /* height: 50vh; */
         /* background-color: black; */
         /* flex-direction: row; */
         /* background-color: black; */
     }
 
     .left {
-        display: flex !important;
-
+        /* display: flex !important; */
+        /* height: 50vh; */
         justify-content: center !important;
 
     }
 
     .right {
-        margin: 0 1rem;
+        margin-top: 40px;
         padding-left: 5rem;
     }
 
     .hero-image {
-        height: 30%;
-        width: 40%;
+        height: 28vh;
+        width: 60vw;
     }
 
     /* .left {
@@ -158,8 +67,8 @@
     }
 
     .right input {
-        height: 100%;
-        width: 70%;
+        /* height: 100%;
+        width: 70%; */
     }
 
     input::placeholder {
@@ -197,5 +106,6 @@
         font-size: 60%;
 
     }
+
 
 }
