--- a/HTML/PSD to HTML/css/login-responsive.css
+++ b/HTML/PSD to HTML/css/login-responsive.css
@@ -15,7 +15,7 @@
     .privacy-text {
         padding-top: 5%;
         position: relative !important;
-        bottom: 20 !important;
+        bottom: 20px !important;
     }
 
     .hero-image {
@@ -50,7 +50,7 @@
     .privacy-text {
         padding-top: 5%;
         position: relative !important;
-        bottom: 2 !important;
+        bottom: 2px !important;
     }
 
     .hero-image {
