made some changes

--- a/MVC/CI-Platform/CIPlatformWeb/Views/Home/Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
             </a>
 
             <span class="mt-3 login-span text-light-custom">
-                Don't have an account? <a href="#">
+                Don't have an account? <a asp-controller="Home" asp-action="Registration">
                     Create an
                     account
                 </a>
