--- a/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/fg-responsive.css
+++ b/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/fg-responsive.css
@@ -15,7 +15,7 @@
     .privacy-text {
         padding-top: 5%;
         position: relative !important;
-        bottom: 20 !important;
+        bottom: 20px !important;
     }
 
     .hero-image {
@@ -48,7 +48,7 @@
     .privacy-text {
         padding-top: 5%;
         position: relative !important;
-        bottom: 2 !important;
+        bottom: 2px !important;
     }
 
     .hero-image {
@@ -57,5 +57,9 @@
 
     .image-content h1 {
         font-size: larger;
+    }
+
+    #login-btn {
+        font-size: 12px;
     }
 }
