--- a/HTML/PSD to HTML/css/home.css
+++ b/HTML/PSD to HTML/css/home.css
@@ -120,7 +120,7 @@ img {
 }
 
 .hide-aside {
-    display: none !important;
+    display: block !important;
 }
 
 .apply-btn {
@@ -131,21 +131,114 @@ img {
 
 }
 
+#filter-menu {
+    display: none;
+}
+
 .mission-desc {
     text-overflow: ellipsis;
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    color: #757575;
 
+}
+
+
+.start-end-date {
+    color: #414141;
+    width: max-content;
+    /* margin: -1rem; */
+}
+
+.deadline {
+    color: #757575;
+}
+
+.seats-left {
+    color: #757575;
 }
 
 .theme-name {
     color: #414141;
     background-color: #FFFFFF;
     border-radius: 18px;
+    width: max-content;
 
 }
+
+.-translate-middle-y {
+    transform: translateY(50%);
+}
+
+.org-name {
+    color: #414141;
+}
+
+.country-div {
+    right: 1rem;
+    top: 0.5rem;
+    background: #000000;
+    border-radius: 18px;
+    opacity: 0.5;
+    color: #FFFFFF;
+}
+
+.favourate {
+    top: 4.5rem;
+    right: 1rem;
+    color: #FFFFFF;
+    background: #000000;
+    border-radius: 18px;
+    opacity: 0.5;
+}
+
+.user-div {
+    top: 8rem;
+    right: 1rem;
+    color: #FFFFFF;
+    background: #000000;
+    border-radius: 18px;
+    opacity: 0.5;
+}
+
+.country-list-div {
+    left: 20rem;
+    top: 0.5rem;
+    background: #000000;
+    border-radius: 18px;
+    opacity: 0.5;
+    color: #FFFFFF;
+}
+
+.favourate-list {
+    top: 6rem;
+    left: 24rem;
+    color: #FFFFFF;
+    background: #000000;
+    border-radius: 18px;
+    opacity: 0.5;
+}
+
+.user-list-div {
+    top: 10rem;
+    left: 23.8rem;
+    color: #FFFFFF;
+    background: #000000;
+    border-radius: 18px;
+    opacity: 0.5;
+}
+
+.progress-bar {
+    background-color: #F88634 !important;
+}
+
+.card-img-top {
+    height: 100%;
+    width: 100%;
+}
+
 
 /* media quary */
 @media(min-width:481px) and (max-width:992px) {
@@ -171,8 +264,44 @@ img {
         cursor: pointer;
     }
 
+    .favourate {
+        top: 6rem;
+        right: 1rem;
 
+    }
 
+    .user-div {
+        top: 9rem;
+        right: 1rem;
+
+    }
+
+    .country-list-div {
+        left: 8rem;
+        top: 0.5rem;
+        background: #000000;
+        border-radius: 18px;
+        opacity: 0.5;
+        color: #FFFFFF;
+    }
+
+    .favourate-list {
+        top: 6rem;
+        left: 11rem;
+        color: #FFFFFF;
+        background: #000000;
+        border-radius: 18px;
+        opacity: 0.5;
+    }
+
+    .user-list-div {
+        top: 10rem;
+        left: 11rem;
+        color: #FFFFFF;
+        background: #000000;
+        border-radius: 18px;
+        opacity: 0.5;
+    }
 
 }
 
@@ -222,5 +351,68 @@ img {
     .header-toggle {
         background-color: white;
         cursor: pointer;
+    }
+
+    .forth-div div {
+        font-size: 18px;
+    }
+
+    .country-div {
+        right: 1rem;
+        top: 0.5rem;
+    }
+
+    .favourate {
+        top: 6rem;
+        right: 1rem;
+
+    }
+
+    .user-div {
+        top: 10rem;
+        right: 1rem;
+
+    }
+}
+
+@media(min-width:1000px) and (max-width:1025px) {
+    .country-list-div {
+        top: 0.5rem;
+        left: 13rem;
+    }
+
+    .favourate-list {
+        top: 5rem;
+        left: 16rem;
+        /* right: 1rem; */
+
+    }
+
+    .user-list-div {
+        top: 10rem;
+        left: 16rem;
+        /* right: 1rem; */
+
+    }
+}
+
+@media(min-width:1025px) and (max-width:1280px) {
+    .country-list-div {
+        top: 0.5rem;
+        left: 16rem;
+    }
+
+    .favourate-list {
+        top: 5rem;
+        left: 20rem;
+        /* right: 1rem; */
+
+    }
+
+    .user-list-div {
+        top: 10rem;
+        left: 20rem;
+        /* right: 1rem; */
+
     }
 }
