made some changes

--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/ForgotPassword.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/ForgotPassword.cshtml
@@ -87,7 +87,7 @@
               }
             
             <form class="d-flex flex-column mx-auto justify-content-center" method="post">
-                <label asp-for="Email" class="form-label login-label text-light-custom pt-3">Email Address</label>
+            <label asp-for="Email" class="form-label login-label text-light-custom pt-3 text-secondary">Email Address</label>
                 <input type="email"  asp-for="Email" id="email" class="form-control login-input text-light-custom"
                        >
                        <span class="text-danger" asp-validation-for="Email"></span>
