--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Login.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Login.cshtml
@@ -72,7 +72,7 @@
 
     <div class="d-flex flex-column p-5 justify-content-center">
         <form class="d-flex flex-column mx-auto justify-content-center" method="post" asp-action="Login">
-            <label asp-for="Email" class="form-label login-label text-light-custom">Email Address</label>
+            <label asp-for="Email" class="form-label login-label text-light-custom text-secondary">Email Address</label>
             <input type="email" asp-for="Email" id="email" class="form-control login-input text-light-custom"
                    >
                 <span asp-validation-for="Email" class="text-danger"></span>
