--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PlatformLandingPage.cshtml
@@ -2,9 +2,12 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    var UserName = Context.Session.GetString("firstName");  
 }
+
+
 <section>
-    <div class="d-flex justify-content-between container mt-3 first-div">
+    <div class="d-flex justify-content-between container my-3 first-div">
         <div class="dropdown left-div">
             <button class="header-toggle d-md-none border-0">
                 <img class="h-50" src="~/images/list.png" alt="#">
@@ -27,10 +30,11 @@
             <button class="header-serach d-md-none border-0">
                 <img class="search-logo" id="search-btn" src="~/images/search.png" alt="#">
             </button>
-            <img class="rounded-circle user-img" src="~/images/user.png" alt="#">
+            <img class="rounded-circle user-img" src="~/images/user1.png" alt="#">
             <button class="dropdown-toggle policy-btn profile-btn d-none d-sm-inline" data-bs-toggle="dropdown"
                     aria-expanded="false" type="button" id="dropdownMenuButton1">
-                Evan Donohue
+              <span> @UserName</span>
+               
                 <img class="m-1" src="~/images/drop-down.png" alt="#">
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -38,6 +42,9 @@
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
+            <div class="d-inline">
+                <a class="btn btn-danger rounded" asp-action="Logout" asp-controller="Home">Logout</a>
+            </div>
         </div>
 
     </div>
