--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/ForgotPassword.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/ForgotPassword.cshtml
@@ -79,12 +79,21 @@
 
              @if(TempData["MailSuccess"] !=null) 
               {
-             <div class="bg-primary-subtle">
+             <div class="bg-primary-subtle text-center">
                                      
                         @TempData["MailSuccess"]
                     
             </div>
               }
+
+        @if (TempData["ResetPasswordError"] != null)
+        {
+            <div class="bg-danger-subtle text-center">
+
+                @TempData["ResetPasswordError"]
+
+            </div>
+        }
             
             <form class="d-flex flex-column mx-auto justify-content-center" method="post">
             <label asp-for="Email" class="form-label login-label text-light-custom pt-3 text-secondary">Email Address</label>
