--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PlatformLandingPage.cshtml
@@ -40,11 +40,11 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" asp-action="Logout" asp-controller="Home">Logout</a></li>
             </ul>
-            <div class="d-inline">
-                <a class="btn btn-danger rounded" asp-action="Logout" asp-controller="Home">Logout</a>
-            </div>
+            @*<div class="d-inline">
+                <a class="btn btn-danger rounded" >Logout</a>
+            </div>*@
         </div>
 
     </div>
