--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/ResetPassword.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/ResetPassword.cshtml
@@ -82,17 +82,18 @@
             </label>
             <input asp-for="Password" type="password" id="email" class="form-control login-input text-light-custom login-input"
                    >
-                   <span asp-validation-for="Password" class="text-danger"></span>
+                   <span asp-validation-for="Password" class="text-danger error-span"></span>
 
             <label  asp-for="ConfirmPassword" class="mt-3 form-label text-secondary login-label text-light-custom">
                 Confirm New
                 Password
             </label>
+            <input asp-for="ConfirmPassword" type="password" id="psw" class="form-control login-input text-light-custom">
+            <span asp-validation-for="ConfirmPassword" class="text-danger error-span"></span>
+
             <input type="hidden" asp-for="Email" />
             <input type="hidden" asp-for="Token" />
-            <input asp-for="ConfirmPassword" type="password" id="psw" class="form-control login-input text-light-custom">
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            <button type ="submit" class="btn mt-4 text-light-custom" id="login-btn">Change Password</button>
+            <button type="submit" class="btn mt-4 text-light-custom login-input" id="login-btn">Change Password</button>
         </form>
 
         <div class="d-flex flex-column align-items-center bottom-div ">
